add java open