@@ -21,7 +21,7 @@ dependencies {
 application {
     mainClass = 'org.apache.arrow.datafusion.examples.ExampleMain'
     def libraryPath = findProperty("JNI_PATH") ?: "$rootDir/datafusion-java/build/jni_libs/dev"
-    applicationDefaultJvmArgs += "-Djava.library.path=$libraryPath"
+    applicationDefaultJvmArgs += ["-Djava.library.path=$libraryPath", "--add-opens=java.base/java.nio=ALL-UNNAMED"]
 }
 
 tasks.named("run").configure {
